# wagtail_feedback

./: MANIFEST.in  README.md  push-to-github.ps1  push-to-pypi.ps1  setup.cfg
feedback/: __init__.py  filters.py  forms.py  mixins.py  models.py  options.py  panels.py  urls.py  wagtail_hooks.py
feedback/backends/: __init__.py  base.py  ip.py  page.py  session.py
feedback/locale/de/LC_MESSAGES/: django.po
feedback/locale/fr/LC_MESSAGES/: django.po
feedback/locale/nl/LC_MESSAGES/: django.po
feedback/migrations/: 0001_initial.py
feedback/static/feedback/css/: feedback.css
feedback/static/feedback/js/: feedback.js
feedback/templates/feedback/: form.html  happy-sad.html  thanks.html  wrapper.html
feedback/templates/feedback/panels/: feedback_panel.html
feedback/templates/feedback/panels/partials/: aggregate.html  delete.html  error.html  feedback-list-item.html  filters-form.html  list.html  paginator.html  wrapper.html
feedback/templates/feedback/widgets/: range-slider.html
feedback/templatetags/: feedback.py
feedback/views/: __init__.py  admin.py  admin_api.py  public.py  utils.py
