[metadata]
name = wagtail_feedback
version = 1.1.8
description = A Django/Wagtail app to easily ask users for feedback.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nigel
author_email = nigel@goodadvice.it
license = GPL-3.0-only
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2
    Wagtail >= 4.2
